Purge & Update Additional Resources Section
In "Additional Resources", fix some of the assets filenames to mirror
their current names, and add direct links to open some of these assets,
using relative links that take into account how the distribute StdLib
package is organized.

Remove from both the repository and the "Additional Resources" section
of the manual the compiled sample adventures and their associated IFID
files (end users can compile these themselves), and amend `.gitignore`
rules accordingly.

--- a/extras/manual/StdLibMan.html
+++ b/extras/manual/StdLibMan.html
@@ -733,7 +733,7 @@ span.play em,
 <div class="details">
 <span id="author" class="author">Anssi Räisänen</span><br>
 <span id="revnumber">version 2.2.0-WIP,</span>
-<span id="revdate">2020-09-23</span>
+<span id="revdate">2020-09-24</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -1016,7 +1016,7 @@ The writer of the current version is Anssi Räisänen.</p>
 <table>
 <tr>
 <td class="hdlist1">
-<code>changelog.txt</code>   
+<a href="../../StdLib/CHANGELOG.html" title="View the CHANGELOG" target="_blank" rel="noopener"><code>CHANGELOG.html</code></a> 
 </td>
 <td class="hdlist2">
 <p>A text file listing the changes made to the library after version v2.0.</p>
@@ -1024,15 +1024,15 @@ The writer of the current version is Anssi Räisänen.</p>
 </tr>
 <tr>
 <td class="hdlist1">
-<code>copying.txt</code>     
+<a href="../../StdLib/COPYING" title="View the StdLib license file" target="_blank" rel="noopener"><code>COPYING</code></a>  
 </td>
 <td class="hdlist2">
-<p>A text file clarifying some copyright issues.</p>
+<p>A text file clarifying the Standard Library copyright status, its Artistic License 2.0 terms, and other legal issues regarding usage of the library in your own adventures, or creating variations of the library for public distribution.</p>
 </td>
 </tr>
 <tr>
 <td class="hdlist1">
-<code>mygame_import.i</code> 
+<a href="../../StdLib/mygame_import.i" title="Open source file" target="_blank" rel="noopener"><code>mygame_import.i</code></a> 
 </td>
 <td class="hdlist2">
 <p>An auxiliary, not obligatory, definition file for the library.
@@ -1041,15 +1041,7 @@ If you need to edit a great number of default library messages (for verb outcome
 </tr>
 <tr>
 <td class="hdlist1">
-<code>newgame.a3c</code>     
-</td>
-<td class="hdlist2">
-<p>A compiled game of the source code included in <code>newgame.alan</code> (below).</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<code>newgame.alan</code>    
+<a href="../../StdLib/newgame.alan" title="Open adventure template" target="_blank" rel="noopener"><code>newgame.alan</code></a> 
 </td>
 <td class="hdlist2">
 <p>A barebones game source file defining some necessary coding when starting to write a new game.
@@ -1074,26 +1066,10 @@ You can use this as a starting point for a new project.</p>
 </tr>
 <tr>
 <td class="hdlist1">
-<code>testgame.a3c</code>    
-</td>
-<td class="hdlist2">
-<p>The compiled test game, ready to run and play, to test the features of the library.</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<code>testgame.alan</code>   
+<a href="../../StdLib/testgame.alan" title="Open source adventure" target="_blank" rel="noopener"><code>testgame.alan</code></a> 
 </td>
 <td class="hdlist2">
 <p>The source code for a test game showcasing the features of the library.</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<code>testgame.ifid</code>   
-</td>
-<td class="hdlist2">
-<p>An IFID identification number of the compiled <code>testgame.a3c</code> file.</p>
 </td>
 </tr>
 </table>
