--- a/extras/manual/StdLibMan.html
+++ b/extras/manual/StdLibMan.html
@@ -1032,7 +1032,7 @@ The writer of the current version is Anssi Räisänen.</p>
 </tr>
 <tr>
 <td class="hdlist1">
-<a href="../../StdLib/mygame_import.i" title="Open source file" target="_blank" rel="noopener"><code>mygame_import.i</code></a> 
+<a href="../../extras/mygame_import.i" title="Open source file" target="_blank" rel="noopener"><code>mygame_import.i</code></a> 
 </td>
 <td class="hdlist2">
 <p>An auxiliary, not obligatory, definition file for the library.
@@ -1041,7 +1041,7 @@ If you need to edit a great number of default library messages (for verb outcome
 </tr>
 <tr>
 <td class="hdlist1">
-<a href="../../StdLib/newgame.alan" title="Open adventure template" target="_blank" rel="noopener"><code>newgame.alan</code></a> 
+<a href="../../extras/newgame.alan" title="Open adventure template" target="_blank" rel="noopener"><code>newgame.alan</code></a> 
 </td>
 <td class="hdlist2">
 <p>A barebones game source file defining some necessary coding when starting to write a new game.
@@ -1050,26 +1050,27 @@ You can use this as a starting point for a new project.</p>
 </tr>
 <tr>
 <td class="hdlist1">
-<code>quickref.text</code>   
-</td>
-<td class="hdlist2">
-<p>A quick summary of the library features and how to use them.</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<code>quickstart.pdf</code>  
-</td>
-<td class="hdlist2">
-<p>A quick summary for starting to use the library.</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="../../StdLib/testgame.alan" title="Open source adventure" target="_blank" rel="noopener"><code>testgame.alan</code></a> 
+<a href="../../extras/testgame.alan" title="Open source adventure" target="_blank" rel="noopener"><code>testgame.alan</code></a> 
 </td>
 <td class="hdlist2">
 <p>The source code for a test game showcasing the features of the library.</p>
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>The <em>Quick Start Guide</em> and <em>Quick Reference</em> documents, which were previously distributed with the <strong>Standard Library v2</strong> package (files <code>QuickStart.docx</code> and <code>QuickRef.txt</code>), have been temporarily removed from the current distribution.</p>
+</div>
+<div class="paragraph">
+<p>We&#8217;re working on porting both documents (along with <em>The Alan Cookbook</em>) to AsciiDoc, in order to integrate them with the new <strong>Standard Library</strong> repository on GitHub, and updating their contents and examples code to mirror the latest Standard Library version.</p>
+</div>
 </td>
 </tr>
 </table>
