--- a/StdLib/CHANGELOG.html
+++ b/StdLib/CHANGELOG.html
@@ -914,6 +914,9 @@ Unlike a single-piece legs and torso item (e.g. a one-piece swimming suite), a <
 </ul>
 </div>
 </li>
+<li>
+<p><strong><span class="red">Dark Locations</span></strong>&#8201;&#8212;&#8201;Fixed some small bugs and inconsistencies with the mechanics that handle the <code>lit</code> attributes of normal locations and instances of <code>DARK_LOCATION</code> (see <a href="https://github.com/AnssiR66/AlanStdLib/issues/96" title="See original Issue on GitHub" target="_blank" rel="noopener">Issue&nbsp;#96</a>).</p>
+</li>
 </ul>
 </div>
 </div>
